--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(glfw)
 find_package(OpenGL)
 find_package(ENet)
 find_package(GLEW)
+find_package(assimp)
 
 add_definitions(-Wall -Wextra -Wshadow -g -pedantic -fPIC -std=c++11)
 set(CMAKE_BUILD_TYPE "Debug")
@@ -21,6 +22,7 @@ include_directories(
     ${OPENGL_INCLUDE_DIR}
     ${ENET_INCLUDE_DIRS}
     ${GLEW_INCLUDE_DIRS}
+    ${ASSIMP_INCLUDE_DIRS}
 )
 
 file(GLOB_RECURSE sources src/*.cpp)
@@ -35,4 +37,5 @@ target_link_libraries(${PROJECT_NAME}
     ${OPENGL_LIBRARIES}
     ${ENET_LIBRARIES}
     ${GLEW_LIBRARIES}
+    ${ASSIMP_LIBRARIES}
 )
