--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(OpenGL)
 find_package(ENet)
 find_package(GLEW)
 find_package(assimp)
+find_package(FreeImagePlus)
 
 add_definitions(-Wall -Wextra -Wshadow -g -pedantic -fPIC -std=c++11)
 set(CMAKE_BUILD_TYPE "Debug")
@@ -23,6 +24,7 @@ include_directories(
     ${ENET_INCLUDE_DIRS}
     ${GLEW_INCLUDE_DIRS}
     ${ASSIMP_INCLUDE_DIRS}
+    ${FREEIMAGEPLUS_INCLUDE_PATH}
 )
 
 file(GLOB_RECURSE sources src/*.cpp)
@@ -38,4 +40,5 @@ target_link_libraries(${PROJECT_NAME}
     ${ENET_LIBRARIES}
     ${GLEW_LIBRARIES}
     ${ASSIMP_LIBRARIES}
+    ${FREEIMAGEPLUS_LIBRARIES}
 )
